salesforce-litle-MP/src/objects/SalesforceLitleMappingsObject__c.object
<CustomObject>
    <fields>
        <fullName>subMerchantDiscoverConveyMid__c</fullName>
        <description>Sub Merchant DiscoverConveyMid</description>
        <label>subMerchantDiscoverConveyMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddressD__c</fullName>
        <description>Sub Merchant EmailAddressD</description>
        <label>subMerchantEmailAddressDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddressX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantEmailAddressX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddress__c</fullName>
        <description>Sub Merchant EmailAddress</description>
        <label>subMerchantEmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstNameD__c</fullName>
        <description>Sub Merchant FirstNameD</description>
        <label>subMerchantFirstNameDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantFirstNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstName__c</fullName>
        <description>Sub Merchant FirstName</description>
        <label>subMerchantFirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescD__c</fullName>
        <description>Sub Merchant HardCodeBillingDescriptorD</description>
        <label>subMerchantHardCodeBillingDescD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescriptorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantHardCodeBillingDescriptorX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescriptor__c</fullName>
        <description>Sub Merchant HardCodeBillingDescriptor</description>
        <label>subMerchantHardCodeBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantLastNameD__c</fullName>
        <description>Sub Merchant LastNameD</description>
        <label>subMerchantLastNameDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantLastNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantLastName__c</fullName>
        <description>Sub Merchant LastName</description>
        <label>subMerchantLastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmountD__c</fullName>
        <description>Sub Merchant MaxTransactionAmountD</description>
        <label>subMerchantMaxTransactionAmountDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmountX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantMaxTransactionAmountX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmount__c</fullName>
        <description>Sub Merchant MaxTransactionAmount</description>
        <label>subMerchantMaxTransactionAmount</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCodeD__c</fullName>
        <description>Sub Merchant MerchantCategoryCodeD</description>
        <label>subMerchantMerchantCategoryCodeDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantMerchantCategoryCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCode__c</fullName>
        <description>Sub Merchant MerchantCategoryCode</description>
        <label>subMerchantMerchantCategoryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantNameD__c</fullName>
        <description>Sub Merchant MerchantNameD</description>
        <label>subMerchantMerchantNameDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantMerchantNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantName__c</fullName>
        <description>Sub Merchant MerchantName</description>
        <label>subMerchantMerchantName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPhoneD__c</fullName>
        <description>Sub Merchant PhoneD</description>
        <label>subMerchantPhoneDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantPhoneX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantPhone__c</fullName>
        <description>Sub Merchant Phone</description>
        <label>subMerchantPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCodeD__c</fullName>
        <description>Sub Merchant PostalCodeD</description>
        <label>subMerchantPostalCodeDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantPostalCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCode__c</fullName>
        <description>Sub Merchant PostalCode</description>
        <label>subMerchantPostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPspMerchantIdD__c</fullName>
        <description>Sub Merchant PspMerchantIdD</description>
        <label>subMerchantPspMerchantIdDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPspMerchantIdX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantPspMerchantIdX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantPspMerchantId__c</fullName>
        <description>Sub Merchant PspMerchantId</description>
        <label>subMerchantPspMerchantId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvinceD__c</fullName>
        <description>Sub Merchant StateProvinceD</description>
        <label>subMerchantStateProvinceDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantStateProvinceX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvince__c</fullName>
        <description>Sub Merchant StateProvince</description>
        <label>subMerchantStateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1D__c</fullName>
        <description>Sub Merchant StreetAddress1D</description>
        <label>subMerchantStreetAddress1Default</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantStreetAddress1X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1__c</fullName>
        <description>Sub Merchant StreetAddress1</description>
        <label>subMerchantStreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2D__c</fullName>
        <description>Sub Merchant StreetAddress2D</description>
        <label>subMerchantStreetAddress2Default</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantStreetAddress2X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2__c</fullName>
        <description>Sub Merchant StreetAddress2</description>
        <label>subMerchantStreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantUrlD__c</fullName>
        <description>Sub Merchant UrlD</description>
        <label>subMerchantUrlDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantUrlX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantUrlX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantUrl__c</fullName>
        <description>Sub Merchant Url</description>
        <label>subMerchantUrl</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescD__c</fullName>
        <description>Sub Merchant eCheckBillingDescriptorD</description>
        <label>subMerchanteCheckBillingDescD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescriptorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchanteCheckBillingDescriptorX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescriptor__c</fullName>
        <description>Sub Merchant eCheckBillingDescriptor</description>
        <label>subMerchanteCheckBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyNameD__c</fullName>
        <description>Sub Merchant eCheckCompanyNameD</description>
        <label>subMerchanteCheckCompanyNameDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchanteCheckCompanyNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyName__c</fullName>
        <description>Sub Merchant eCheckCompanyName</description>
        <label>subMerchanteCheckCompanyName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>SalesforceLitleMappingsObject</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesforceLitleMappingsObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>